tests/negative/test_mac_bad_name.orb
sym (foo:i32 100);

eval (mac foo () {});

fnc main () () {};